2005-02-08  Sebastien Bacher  <seb128@debian.org>

	* gnome-keyboard-properties-xkb.c: (setup_xkb_tabs):
	* gnome-keyboard-properties-xkblt.c: (def_group_in_gconf_changed):
	patch by Kjartan Maraas <kmaraas@gnome.org>, some code cleanups 
	(Closes: #166267).

2005-01-19  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.c,
	gnome-keyboard-properties-xkbot.c
	gnome-keyboard-properties.glade: big change in the layout options UI.
	Fixing #164090

2005-01-16  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties.glade: fixed #159685

2005-01-15  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbmc.c: fixing long-outstanding bug
	with the current model selection.

2005-01-08  Sebastien Bacher  <seb128@debian.org>

	* gnome-keyboard-properties.glade: fixed the mnemonics for some widgets
	(Closes: #163227).

2005-01-05  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnome-keyboard-properties.glade:  HIG corrections.  
	Use HIG capitalization for buttons: "Reset to defaults" -> 
	"Reset To Defaults".  Use HIG capitalization for window titles: 
	"Choose a keyboard model" -> "Choose A Keyboard Model" & 
	"Choose a layout" -> "Choose A Layout".  Add a missing ":" 
	from "Model" -> "Model:". Remove the dialog separators.  
	Use HIG widget padding to match the other capplet dialogs.
	
2005-01-02  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.c
	gnome-keyboard-properties-xkb.h
	gnome-keyboard-properties-xkblt.c
	gnome-keyboard-properties-xkbmc.c
	gnome-keyboard-properties-xkbpv.c: a bit of the code cleanup

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* gnome-keyboard-properties.glade:
	patch from Heikki Paajanen <hepaajan@iki.fi> (based on the patch
	from Andrew Johnson <acjgenius@earthlink.net>) 
	to not set "close" as the default button (Closes: #98202).

2004-12-31  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.h,
	gnome-keyboard-properties-xkblt.c